kubernetes/system/mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-hl
  namespace: system
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name:  mongo-external
  namespace: system
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
  type: LoadBalancer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: system
spec:
  serviceName: mongo-hl
  selector:
    matchLabels:
      app: mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:7.0.14
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /data/db
          name: data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: longhorn
      resources:
        requests:
          storage: 10Gi
