kubernetes/system/pgadmin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: system
spec:
  selector:
    matchLabels:
      app: pgadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:latest
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /pgadmin4/servers.json
          name: servers
          subPath: servers.json
        - mountPath: /etc/ssl/certs
          name: ca
      volumes:
      - name: servers
        configMap:
          name: servers
      - name: ca
        secret:
          secretName: pgadmin-ca
          items:
          - key: ca
            path: ca.crt
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: system
spec:
  selector:
    app: pgadmin
  ports:
    - port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
  namespace: system
spec:
  hostnames:
  - pgadmin.bgalhardo.internal
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal
    sectionName: https
    namespace: system
  rules:
  - backendRefs:
    - name: pgadmin
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
